--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ library:
     Binja.Llil
     Binja.Mlil
     Binja.Function
+    Binja.BasicBlock
     Binja.Plugin
     Binja.ReferenceSource
     Binja.Symbol
