--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 library:
   source-dirs: src
   exposed-modules:
+    Binja.AnalysisContext
     Binja.BinaryView
     Binja.FFI
     Binja.Llil
@@ -38,6 +39,7 @@ library:
     Binja.Types
     Binja.Utils
     Callgraph
+    DependenceGraph
   other-modules: []
   ghc-options:
     - -Wall
