initial types and functions for control flow graph derived from FunctionContext

--- a/package.yaml
+++ b/package.yaml
@@ -38,6 +38,7 @@ library:
     Binja.Symbol
     Binja.Types
     Binja.Utils
+    Binja.ControlFlowGraph
     Callgraph
   other-modules: []
   ghc-options:
