--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,7 @@ library:
     Binja.Utils
     Binja.ControlFlowGraph
     Callgraph
+    DependenceGraph
   other-modules: []
   ghc-options:
     - -Wall
